refactor: InfluxDB3